cabal-version:       2.4
name:                Yara

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.1
synopsis:            Parse YARA rules and scans files.
-- description: The following library is a both a set of standalone parsers for the YARA rules specification as well as an system program that scans documents. 
license:             GPL-3.0-only
license-file:        LICENSE
author:              David Heras
maintainer:          dheras@protonmail.com
category:            Data
extra-source-files:  CHANGELOG.md
library
  -- exposed-modules:

  -- other-modules:

  -- other-extensions:

  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      Yara
  default-language:    Haskell2010

executable Yara
  main-is:             yara.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0

  -- Directories containing source files.
  hs-source-dirs:      Yara

  -- Base language which the package is written in.
  default-language:    Haskell2010

