cabal-version:       2.4
name:                yara
version:             1
synopsis:            Parse YARA rules and scans files.
description:         The following library is a both a set of standalone parsers
                     for the YARA rules specification as well as an system
                     program that.
                     scans documents.
license:             GPL-3.0-only
license-file:        LICENSE
author:              David Heras
maintainer:          dheras@protonmail.com
category:            Data
extra-source-files:  CHANGELOG.md
library
  exposed-modules:   Text.Yara.Shared
                     Text.Yara.Parsers.Buffer
                     Text.Yara.Parsers.Combinators
                     Text.Yara.Parsers.Hash
                     Text.Yara.Parsers.Parsers
                     Text.Yara.Parsers.Types
                     Text.Yara.Parsers.Utilities
                     Paths_Yara

  -- other-modules:

  -- other-extensions:

  build-depends:       base ^>=4.12.0.0
  autogen-modules:     Paths_Yara
  hs-source-dirs:      src/
  default-language:    Haskell2010
  buildable:           True

--executable Yara
  --main-is:             yara.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  --build-depends:       base ^>=4.12.0.0

  -- Directories containing source files.
  --hs-source-dirs:      Yara

  -- Base language which the package is written in.
  --default-language:    Haskell2010

