cabal-version:       2.4
name:                yara
version:             1
synopsis:            Parse YARA rules and scans files.
description:         The following library is a both a set of standalone parsers
                     for the YARA rules specification as well as an system
                     program that.
                     scans documents.
license:             GPL-3.0-only
license-file:        LICENSE
author:              David Heras
maintainer:          dheras@protonmail.com
category:            Data
extra-source-files:  CHANGELOG.md
library
  exposed-modules:   Yara.Shared
                     Yara.Parsers.Buffer
                     Yara.Parsers.Combinators
                     Yara.Parsers.Hash
                     Yara.Parsers.Parsers
                     Yara.Parsers.Types
                     Yara.Parsers.Utilities
                     Paths_Yara

  -- other-modules:

  -- other-extensions:

  build-depends:       base ^>=4.12.0.0
  autogen-modules:     Paths_Yara
  hs-source-dirs:      src/
  default-language:    Haskell2010
  buildable:           True

executable yara-haskell

  ghc-options:     -threaded -Wall -fno-warn-unused-do-bind -o2 -optc-ffast-math
                   -rtsopts -with-rtsopts=-K16m -funfolding-use-threshold=16
                   -optc-O3 -fexcess-precision
  main-is:         yara-haskell.hs
  buildable:       True
  other-modules:

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  --build-depends:       base ^>=4.12.0.0

  -- Directories containing source files.
  --hs-source-dirs:      Yara

  -- Base language which the package is written in.
  --default-language:    Haskell2010

source-repository head
  type:          git
  location:      git://github.com/dheras/yara-haskell.git
