cabal-version:       2.4
name:                yara
version:             0.0.0.2
synopsis:            Parse YARA rules and scans files.
license:             GPL-3.0-only
license-file:        LICENSE
stability:           alpha
homepage:            https://github.com/dtheras/yara
author:              D. Heras
maintainer:          dheras@protonmail.com
category:            Text
source-repository head
  type:      git
  location:  git://github.com/dheras/yara-haskell.git
extra-source-files:  CHANGELOG.md
build-type:          Simple
default-extensions:  ApplicativeDo
                     BangPatterns
                     BlockArguments
                     ConstraintKinds
                     CPP
                     DataKinds
                     DeriveAnyClass
                     DeriveGeneric
                     DeriveFoldable
                     DeriveFunctor
                     DeriveLift
                     DeriveTraversable
                     FlexibleInstances
                     FlexibleContexts
                     FunctionalDependencies
                     GADTs
                     GeneralizedNewtypeDeriving
                     InstanceSigs
                     KindSignatures
                     LambdaCase
                     MagicHash
                     MultiParamTypeClasses
                     MultiWayIf
                     NoImplicitPrelude
                     NumericUnderscores
                     OverloadedStrings
                     PatternSynonyms
                     PatternGuards
                     PolyKinds
                     RankNTypes
                     RecordWildCards
                     ScopedTypeVariables
                     StandaloneDeriving
                     QuasiQuotes
                     TemplateHaskell
                     TupleSections
                     TypeFamilies
                     TypeOperators
                     TypeSynonymInstances
                     UnboxedTuples
                     UnboxedSums
                     ViewPatterns

ghc-options:         -funbox-strict-fields
                     -o3
                     -optc-ffast-math
                     -threaded
                     -Wall
                     -Wno-warn-unused-do-bind
                     -fexcess-precision

build-depends:       base                 ^>= 4.12.0.0
                     bytestring           >= 0.10.10.0
                     containers           >= 0.6.2.1
                     data-default         >= 0.7.1.1
                     deepseq              >= 1.4.4.0
                     extra                >= 1.6.1
                     filepath-bytestring  >= 1.4.2.1.6
                     hashable             >= 1.3.0.0
                     mtl                  >= 2.2.2
                     parser-combinators   >= 0.2.0
                     regex-posix          >= 0.96.0.0
                     scientific           >= 0.3.6.2
                     unix                 >= 2.7.2.2
                     unordered-containers >= 0.2.10.0

flag testing
  default:     False
  manual:      True
  description: Testing mode.

library:
  description:       TODO
  exposed-modules:   Yara
  other-modules:     Paths_Yara
  autogen-modules:   Paths_Yara
  hs-source-dirs:    src/

  default-language:  Haskell2010
  if flag(testing)
    buildable: False

executable yara-hs
  description:       TODO
  ghc-options:       -threaded
                     -Wall
                     -fno-warn-unused-do-bind
                     -o3
                     -optc-ffast-math
                     -rtsopts
                     -with-rtsopts=-K16m
                     -funfolding-use-threshold=16
                     -optc-O3

  main-is:           prog/yara.hs
  buildable:         True


  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  --build-depends:       base ^>=4.12.0.0

  -- Directories containing source files.
  --hs-source-dirs:      Yara

  -- Base language which the package is written in.
  --default-language:    Haskell2010



--https://medium.com/mercury-bank/enable-all-the-warnings-a0517bc081c3
-- -Wincomplete-record-updates -Wpartial-fields -Werror=missing-home-modules
-- -Wredundant-constraints -Wcpp-undef -Wmissing-export-lists
-- -Wall-missed-specialisations -Wno-unsafe -Wno-safe
